src/test/deca/codegen/valid/exclam_bool_debug.deca
{
    boolean b = true;
    println(!b);
}