src/test/deca/codegen/invalid/unary_minus_boolean.deca
// Resultats :
// Erreur attendue : type non supporté
{
    boolean b = true;
    b = -b;
}